# lox_interpreter_c

./: .gitignore  Makefile  README.org  meson.build  shell.nix
include/: arg.h  clox_error.h  clox_keywords.h  clox_linked_list.h  clox_object.h  clox_scanner.h  clox_string.h  clox_token.h  clox_token_type.h  run.h
src/: arg.c  clox_object.c  dlist.c  error.c  keywords.c  main.c  run.c  scanner.c  string.c  token.c
